Bounded score value types ScoreType matches categories Added progress bar for 6 categories Icon colours Allow changing score by different values